# lc

./: CHANGELOG.md  lc.cabal
src/: LC.hs  Main.hs  Parser.hs
tests/: test-parser.hs
