cabal-version:      3.0
name:               lc
version:            0.1.0.0
synopsis:           Lambda Calculus Interpreter
-- description:
homepage:           https://github.com/isaac025/lc
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lc
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parser
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , parsec
    hs-source-dirs:   src

test-suite lc-parser-test
    type:             exitcode-stdio-1.0
    main-is:          test-parser.hs
    build-depends:    base ^>=4.17.2.1
                    , QuickCheck
                    , lc
    default-language: Haskell2010
    hs-source-dirs:   tests

