cabal-version:      3.0
name:               lc
version:            0.1.0.0
synopsis:           Lambda Calculus Interpreter
homepage:           https://github.com/isaac025/lc
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Language
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

common warnings
    ghc-options: -Wall

executable lc
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        Parser
        LC
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , parsec
    hs-source-dirs:   src
